fix: Issue with background video playing on mobile in low power mode

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .App-header {
-  background-color: rgba(39,51,38,0.87);
+  background-color: rgba(39,51,38,0.95);
   min-height: 70vh;
   display: flex;
   flex-direction: column;
@@ -28,6 +28,8 @@ div.App > main > p {
   object-fit: cover;
   width: 100%;
   height: 100%;
+  top: 0;
+  left: 0;
 }
 
 @media only screen and (max-width: 667px) {
